--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
+}
+
 apply plugin: 'kotlin'
 
 group = 'com.strumenta.mpsinterop'
