--- a/build.gradle
+++ b/build.gradle
@@ -15,32 +15,19 @@ buildscript {
     }
 }
 
-plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
-}
+// plugins {
+//     id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
+// }
 
-apply plugin: 'kotlin'
+//apply plugin: 'kotlin'
 
 group = 'com.strumenta.mpsinterop'
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter()
-}
+// sourceCompatibility = 1.8
+// targetCompatibility = 1.8
 
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'org.jetbrains.kotlin:kotlin-test'
-    implementation 'org.jetbrains.kotlin:kotlin-test-junit'
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-test {
-    testLogging {
-        events "passed", "skipped", "failed", "standardOut", "standardError"
-    }
-}
+// test {
+//     testLogging {
+//         events "passed", "skipped", "failed", "standardOut", "standardError"
+//     }
+// }
