--- a/mpsinterface/build.gradle
+++ b/mpsinterface/build.gradle
@@ -32,8 +32,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'org.jetbrains.kotlin:kotlin-test'
-    implementation 'org.jetbrains.kotlin:kotlin-test-junit'
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 
 sourceCompatibility = 1.8
