--- a/mpsinterface/build.gradle
+++ b/mpsinterface/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.4.10'
 
     repositories {
         mavenCentral()
@@ -16,10 +16,9 @@ buildscript {
 }
 
 plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
+    id 'org.jetbrains.kotlin.jvm'
+    id "org.jlleitschuh.gradle.ktlint" version "9.4.0"
 }
-
-apply plugin: 'kotlin'
 
 group = 'com.strumenta.mpsinterop'
 
@@ -34,6 +33,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 sourceCompatibility = 1.8
