--- a/mpsinterface/build.gradle
+++ b/mpsinterface/build.gradle
@@ -7,6 +7,8 @@ buildscript {
             name 'JFrog OSS snapshot repo'
             url  'https://oss.jfrog.org/oss-snapshot-local/'
         }
+        maven { url "https://repo.maven.apache.org/maven2" }
+        maven { url 'https://plugins.gradle.org/m2/' }
         jcenter()
     }
 
@@ -19,9 +21,12 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'application'
     id "org.jlleitschuh.gradle.ktlint" version "9.4.0"
+    id 'maven-publish'
+    id "com.jfrog.bintray" version "1.8.5"
 }
 
 group = 'com.strumenta.mpsinterop'
+version = '0.1.0'
 
 repositories {
     mavenLocal()
@@ -52,13 +57,7 @@ application {
 }
 
 jar {
-    manifest {
-        attributes "Main-Class": 'com.strumenta.mps.exporter.ExportertoolKt'
-    }
 
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
 }
 
 ktlint {
@@ -66,3 +65,59 @@ ktlint {
 }
 
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes "Main-Class": 'com.strumenta.mps.exporter.ExportertoolKt'
+    }
+    archiveBaseName = 'mpsinterface-fatJar'
+    archiveVersion = 'latest'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+def fatJarFile = file("$buildDir/libs/mpsinterface-fatJar-latest.jar")
+def fatJarArtifact = artifacts.add('archives', fatJarFile) {
+    type 'jar'
+    builtBy 'fatJar'
+}
+
+publishing {
+    publications {
+        mpsInterface(MavenPublication) {
+            groupId project.group
+            version project.version
+
+            from components.java
+        }
+        mpsInterfaceFatJar(MavenPublication) {
+            groupId project.group
+            artifactId 'mpsinterface-fatjar'
+            version project.version
+
+            artifact fatJarArtifact
+        }
+    }
+}
+
+bintray {
+    user = rootProject.findProperty('bintray_user')
+    key = rootProject.findProperty('bintray_api_key')
+    pkg {
+        repo = 'strumenta-oss-maven'
+        name = project.name
+        userOrg = 'strumenta'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/Strumenta/mpsinterop'
+        version {
+            name = 'v' + project.version
+            desc = 'Version ' + project.version
+            released = new Date()
+            vcsTag = 'v' + project.version
+        }
+    }
+
+    publications = ['mpsInterface', 'mpsInterfaceFatJar']
+    dryRun = false
+    publish = true
+    override = true
+}
